force-app/main/default/objects/ApplicantRelationship__c/ApplicantRelationship__c.object-meta.xml
<CustomObject>
    <description
  >Junction objection between Account/Contact and Applicant</description>
    <label>Applicant Relationship</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>ApplicantRelationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>