force-app/main/default/objects/ApplicantRelationship__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <description>Applicant relationship</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>ApplicantRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>