force-app/main/default/objects/ApplicantRelationship__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicant and finanacial account relationship</description>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Applicant Relationships</relationshipLabel>
    <relationshipName>ApplicantRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>