force-app/main/default/objects/ApplicantRelationship__c/fields/isPrimary__c.field-meta.xml
<CustomField>
    <fullName>isPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Primary Applicant for the application</description>
    <label>isPrimary</label>
    <type>Checkbox</type>
</CustomField>