force-app/main/default/objects/ApplicantRelationship__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <description>Role of the applicant with application</description>
    <label>Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>